--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
 	<style type="text/css">
 		@font-face {
 			font-family: digit;
-			src: url('https://white-album.tk/love/digital-7_mono.ttf') format("truetype");
+			src: url('/digital-7_mono.ttf') format("truetype");
 		}
 	</style>
 <meta name="keywords" content="" />
-<meta name="description" content="" />	<link href="https://white-album.tk/love/css/default.css" type="text/css" rel="stylesheet">
-	<script type="text/javascript" src="https://white-album.tk/love/js/jquery.js"></script>
-	<script type="text/javascript" src="https://white-album.tk/love/js/garden.js"></script>
-    <script type="text/javascript" src="https://white-album.tk/love/js/functions.js"></script>
-	
-	<script type="text/javascript" src="https://white-album.tk/love/js/jq.snow.js"></script>
+<meta name="description" content="" />
+<link href="css/default.css" type="text/css" rel="stylesheet">
+	<script type="text/javascript" src="js/jquery.js"></script>
+	<script type="text/javascript" src="js/garden.js"></script>
+    <script type="text/javascript" src="/js/functions.js"></script>
+	<script type="text/javascript" src="/js/jq.snow.js"></script>
 </head> 
 
 <body>
@@ -127,22 +127,22 @@
 		}
 	</script>
 
-	</script><div id="landlord">
-    <div class="message" style="opacity:0"></div>
-    <canvas id="live2d" width="280" height="250" class="live2d"></canvas>
-    <div class="hide-button">隐藏</div>
+	<embed src="https://bmob-cdn-22716.b0.upaiyun.com/2019/02/13/86c86913400005778080c9c5e0d4a064.mp3" autostart="true" loop="true" hidden="true"></embed>	
+
+  </script><div id="landlord">
+	<div class="message" style="opacity:0"></div>
+	<canvas id="live2d" width="280" height="250" class="live2d"></canvas>
+	<div class="hide-button">隐藏</div>
   </div>
   <script type="text/javascript" src="https://cdn.bootcss.com/jquery/2.2.4/jquery.min.js"></script>
   <script type="text/javascript">
-    var message_Path = 'https://raw.githubusercontent.com/jamesyangget/jamesyang/gh-pages/live2d/'
-    var home_Path = 'https://white-album.tk/jamesyang/'
+	  var message_Path = '/live2d/'
+  	var home_Path = 'https://white-album.tk/love/'
   </script>
-  <script type="text/javascript" src="https://raw.githubusercontent.com/jamesyangget/jamesyang/gh-pages/live2d/js/live2d.js"></script>
-  <script type="text/javascript" src="https://raw.githubusercontent.com/jamesyangget/jamesyang/gh-pages/live2d/js/message.js"></script>
+  <script type="text/javascript" src="/live2d/js/live2d.js"></script>
+  <script type="text/javascript" src="/live2d/js/message.js"></script>
   <script type="text/javascript">
-    loadlive2d("live2d", "https://raw.githubusercontent.com/jamesyangget/jamesyang/gh-pages/live2d/model/kesshouban_v2/model.json");
-	</script>
-
-	<embed src="https://bmob-cdn-22716.b0.upaiyun.com/2019/02/13/86c86913400005778080c9c5e0d4a064.mp3" autostart="true" loop="true" hidden="true"></embed>
+	  loadlive2d("live2d", "/live2d/model/kesshouban_v2/model.json");
+  </script>
 </body>
 </html>
