--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 </head> 
 
 <body>
+	<embed src="https://bmob-cdn-22716.b0.upaiyun.com/2019/02/13/86c86913400005778080c9c5e0d4a064.mp3" autostart="true" loop="true" hidden="true"></embed>
 <!--下面是调用方法和参数说明-->
 <script>
 	$(function(){
@@ -127,8 +128,6 @@
 		}
 	</script>
 
-	<embed src="https://bmob-cdn-22716.b0.upaiyun.com/2019/02/13/86c86913400005778080c9c5e0d4a064.mp3" autostart="true" loop="true" hidden="true"></embed>	
-
   </script><div id="landlord">
 	<div class="message" style="opacity:0"></div>
 	<canvas id="live2d" width="280" height="250" class="live2d"></canvas>
@@ -137,7 +136,7 @@
   <script type="text/javascript" src="https://cdn.bootcss.com/jquery/2.2.4/jquery.min.js"></script>
   <script type="text/javascript">
 	  var message_Path = '/live2d/'
-  	var home_Path = 'https://white-album.tk/love/'
+  	var home_Path = '/'
   </script>
   <script type="text/javascript" src="/live2d/js/live2d.js"></script>
   <script type="text/javascript" src="/live2d/js/message.js"></script>
