--- a/index.html
+++ b/index.html
@@ -38,22 +38,26 @@
 			<div id="content">
 				<div id="code">
 					<span class="comments">/**</span><br />
-					<span class="space"/><span class="comments">* Abby：今天是2014年2月14日。</span><br />
+					<span class="space"/><span class="comments">* 今天是2019年2月14日。</span><br />
+					<span class="space"/><span class="comments">* 是fff團出場的日子</span><br />
+					<span class="space"/><span class="comments">* 蘇卡不列</span><br />
 					<span class="space"/><span class="comments">* 我写这个网站来庆祝这个特殊的日子。 </span><br />
-					<span class="space"/><span class="comments">* 虽然，我不是一个很擅长表达言语的人。 </span><br />
-					<span class="space"/><span class="comments">* 但我希望我们能记住我们在一起的每一刻。</span><br />
 					<span class="space"/><span class="comments">*/</span><br />
-					Girl u = <span class="keyword">new</span> Girl(<span class="string">"Abby"</span>);<br/>
-					Boy i = <span class="keyword">new</span> Boy(<span class="string">"Mark"</span>);<br />
-					<span class="comments">// 今天是二月十四日。 </span><br />
-					<span class="comments">// 祝老婆情人节快乐。</span><br />
-					<span class="comments">// 我把你的美丽记录在日记里，让文字把你的青春铭记。</span><br />
-					<span class="comments">// 我把你的笑容粘贴在日记里，让图片把你的活泼记忆。</span><br />
-					<span class="comments">// 我把我的照片夹进日记里，让爱情把你的幸福牢系。</span><br />
-					<span class="comments">// 对我来说是个重要的时刻，我发现我已经深深爱上了你！</span><br />
-					<span class="comments">// 当我凝视你的眼，当我听到你的声音。 </span><br />
-					<span class="comments">// 当我闻到你秀发上淡淡的清香。 </span><br />
-					<span class="comments">//  </span><br />
+			   《从前慢》<br />
+					<span class="string">// 木心</span><br />
+					<span class="comments">// 记得早先少年时</span><br />
+					<span class="comments">// 大家诚诚恳恳</span><br />
+					<span class="comments">// 说一句 是一句</span><br /><br /><br />
+					<span class="comments">// 清早上火车站</span><br />
+					<span class="comments">// 长街黑暗无行人</span><br />
+					<span class="comments">// 卖豆浆的小店冒着热气</span><br /><br /><br />
+					<span class="comments">// 从前的日色变得慢</span><br />
+					<span class="comments">// 车，马，邮件都慢</span><br />
+					<span class="comments">// 一生只够爱一个人</span><br /><br /><br />
+					<span class="comments">// 从前的锁也好看</span><br />
+					<span class="comments">// 钥匙精美有样子</span><br />
+					<span class="comments">// 你锁了 人家就懂了</span><br /><br />
+					<!--
 					我爱你;<br />
 					<span class="comments">//当我感受到我剧烈的心跳，我明白了：</span><br />
 					我想你;<br />
@@ -67,23 +71,19 @@
 					<span class="placeholder"/><span class="comments">// 我认为这是一个重要的决定。</span><br />
 					<span class="placeholder"/><span class="comments">// 你可以在任何时候决定。</span><br />
 					<span class="placeholder"/>爱你 = 想你<br /><br />
-					我非常高兴能认识你<br />
+					非常高兴能认识你<br />
+					-->
 				</div>
 				<div id="loveHeart">
 					<canvas id="garden"></canvas>
-					<div id="words">
+				<div id="words">
 						<div id="messages">
-											Abby,我已经相爱了：
+										距離我們第一次相遇：
 							<div id="elapseClock"></div>
 						</div>
 						<div id="loveu">
-							<div class="signature">--Mark</div>
+							<div class="signature">--James</div>
 						</div>
-					</div>
-	
-	
-							 </div>
-					</div>
 				</div>
 	</div>
 		<div class="bg1">	
@@ -98,12 +98,12 @@
 			</div>
 		</div>
 	</div>
-	
+
 		<script type="text/javascript">
 			var offsetX = $("#loveHeart").width() / 2;
 			var offsetY = $("#loveHeart").height() / 2 - 55;
 			var together = new Date();
-			together.setFullYear(2010, 06, -32);
+			together.setFullYear(2013, 11, -32);
 			together.setHours(00);
 			together.setMinutes(0);
 			together.setSeconds(0);
