--- a/demo1.html
+++ b/demo1.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>告白气球</title>
+		<link rel="icon" href="favicon.ico" sizes="128x128">
 		<style type="text/css">
 		body,html{
 			width: 100%;
