--- a/demo1.html
+++ b/demo1.html
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8">
 		<title>告白气球</title>
 		<link rel="icon" href="favicon.ico" sizes="128x128">
+		<link rel="icon" href="favicon.ico" type="image/x-icon">
 		<style type="text/css">
 		body,html{
 			width: 100%;
