--- a/demo1.html
+++ b/demo1.html
@@ -31,7 +31,7 @@
 		</div>
 		<embed src="告白气球-周杰伦.mp3" autostart="true" loop="true" hidden="true"></embed>
  
-		<script type="text/javascript" src="js/index.js"></script>
+		<script type="text/javascript" src="js/demo1.js"></script>
 		<script type="text/javascript">
 			//照片
 			var n = 1;
