--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
-﻿<!DOCTYPE HTML>
+<!DOCTYPE HTML>
 <html>
 <head>
   <title>LOVE</title>
   <link rel="icon" href="favicon.ico" sizes="128x128">
   <link rel="icon" href="https://raw.githubusercontent.com/jamesyangget/jamesyang/gh-pages/favicon.ico" type="image/x-icon">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <embed src="https://bmob-cdn-22716.b0.upaiyun.com/2019/02/13/86c86913400005778080c9c5e0d4a064.mp3" autostart="true" loop="true" hidden="true"></embed>
   <style type="text/css">
     @font-face {
       font-family: digit;
@@ -22,8 +23,7 @@
 </head> 
 
 <body>
-  <embed src="https://bmob-cdn-22716.b0.upaiyun.com/2019/02/13/86c86913400005778080c9c5e0d4a064.mp3" autostart="true" loop="true" hidden="true"></embed>
-
+  
   <!--下面是调用方法和参数说明-->
   <script>
     $(function(){
