--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
   <style type="text/css">
     @font-face {
       font-family: digit;
-      src: url('/digital-7_mono.ttf') format("truetype");
+      src: url('https://raw.githubusercontent.com/jamesyangget/love/master/digital-7_mono.ttf') format("truetype");
     }
   </style>
 <meta name="keywords" content="" />
 <meta name="description" content="" />
-<link href="css/default.css" type="text/css" rel="stylesheet">
-  <script type="text/javascript" src="js/jquery.js"></script>
-  <script type="text/javascript" src="js/garden.js"></script>
-    <script type="text/javascript" src="/js/functions.js"></script>
-  <script type="text/javascript" src="/js/jq.snow.js"></script>
+<link href="https://raw.githubusercontent.com/jamesyangget/love/master/css/default.css" type="text/css" rel="stylesheet">
+  <script type="text/javascript" src="https://raw.githubusercontent.com/jamesyangget/love/master/js/jquery.js"></script>
+  <script type="text/javascript" src="https://raw.githubusercontent.com/jamesyangget/love/master/js/garden.js"></script>
+    <script type="text/javascript" src="https://raw.githubusercontent.com/jamesyangget/love/master/js/functions.js"></script>
+  <script type="text/javascript" src="https://raw.githubusercontent.com/jamesyangget/love/master/js/jq.snow.js"></script>
 
 </head> 
 
