--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <style type="text/css">
     @font-face {
       font-family: digit;
-      src: url('https://raw.githubusercontent.com/jamesyangget/love/master/digital-7_mono.ttf') format("truetype");
+      src: url('/digital-7_mono.ttf') format("truetype");
     }
   </style>
 <meta name="keywords" content="" />
