--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </style>
 <meta name="keywords" content="" />
 <meta name="description" content="" />
-<link href="https://raw.githubusercontent.com/jamesyangget/love/master/css/default.css" type="text/css" rel="stylesheet">
+<link href="css/default.css" type="text/css" rel="stylesheet">
   <script type="text/javascript" src="https://raw.githubusercontent.com/jamesyangget/love/master/js/jquery.js"></script>
   <script type="text/javascript" src="https://raw.githubusercontent.com/jamesyangget/love/master/js/garden.js"></script>
     <script type="text/javascript" src="https://raw.githubusercontent.com/jamesyangget/love/master/js/functions.js"></script>
