--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 <meta name="keywords" content="" />
 <meta name="description" content="" />
 <link href="css/default.css" type="text/css" rel="stylesheet">
-  <script type="text/javascript" src="https://raw.githubusercontent.com/jamesyangget/love/master/js/jquery.js"></script>
-  <script type="text/javascript" src="https://raw.githubusercontent.com/jamesyangget/love/master/js/garden.js"></script>
-    <script type="text/javascript" src="https://raw.githubusercontent.com/jamesyangget/love/master/js/functions.js"></script>
-  <script type="text/javascript" src="https://raw.githubusercontent.com/jamesyangget/love/master/js/jq.snow.js"></script>
+  <script type="text/javascript" src="js/jquery.js"></script>
+  <script type="text/javascript" src="js/garden.js"></script>
+    <script type="text/javascript" src="js/functions.js"></script>
+  <script type="text/javascript" src="js/jq.snow.js"></script>
 
 </head> 
 
